tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/float/exp-trailing-us.stderr
TOML parse error at line 1, column 21
  |
1 | exp-trailing-us = 1e_23_
  |                     ^
invalid floating-point number
